many chgs to config, add mustache, fixes:
* mv config stuff to //config (//utils:Config => //config:Config, etc)
* partition config stuff (cc_toolchain, sys, build, deploy configs)
* replace shell/awk/etc. preprocessing with mustache
  ** runtime/caml: jumptbl.h, opnames.h, s.h
  ** runtime/build_config.h.mustache
  ** domainstate stuff in utils, runtime
  ** asm code in runtime, e.g. //runtime/amd64.S.mustache
  ** bytecomp/opcodes.ml.mustache
* eliminate runtime/caml/cross-compile in favor of mustache processing
* fix otherlibs builds
* etc.

--- a/.bazelrc
+++ b/.bazelrc
@@ -17,7 +17,7 @@ run:q --ui_event_filters=-stdout
 run:q --ui_event_filters=-stderr
 run:q --noshow_progress
 
-build --toolchain_resolution_debug=.*
+# build --toolchain_resolution_debug=.*
 #build --toolchain_resolution_debug=@bazel_tools//tools/cpp:toolchain_type
 #build --toolchain_resolution_debug=//toolchain/type:.*
 #build --toolchain_resolution_debug=//boot/toolchain/type:.*
