--- a/configure.ac
+++ b/configure.ac
@@ -226,7 +226,7 @@ AC_CONFIG_FILES([manual/src/html_processing/src/common.ml])
 AC_CONFIG_FILES([ocamltest/ocamltest_config.ml])
 AC_CONFIG_FILES([utils/config.generated.ml])
 AC_CONFIG_HEADERS([runtime/caml/m.h])
-AC_CONFIG_HEADERS([runtime/caml/s.h])
+dnl AC_CONFIG_HEADERS([runtime/caml/s.h])
 AC_CONFIG_HEADERS([runtime/caml/version.h])
 AC_CONFIG_FILES([compilerlibs/META])
 AC_CONFIG_FILES([otherlibs/dynlink/META])
@@ -239,6 +239,7 @@ AC_CONFIG_FILES([config/config_sys.ml])
 AC_CONFIG_FILES([config/config.dev.ml])
 AC_CONFIG_FILES([config/config.ml.json])
 AC_CONFIG_FILES([profile/system/local/BUILD.bazel])
+AC_CONFIG_HEADERS([runtime/caml/s.local.h])
 AC_CONFIG_FILES([toolchain/profile/cc/local/BUILD.bazel])
 
 # Definitions related to the version of OCaml
