--- a/middle_end/flambda/BUILD.bazel
+++ b/middle_end/flambda/BUILD.bazel
@@ -320,7 +320,7 @@ compiler_module(
         "//utils:Int_replace_polymorphic_compare",
         "//typing:Ident",
         "//lambda:Debuginfo",
-        "//utils:Config",
+        "//config:Config",
         "//middle_end/flambda/base_types:Closure_origin",
         "//middle_end/flambda/base_types:Closure_id",
         "//utils:Clflags",
@@ -1075,7 +1075,7 @@ compiler_module(
         "//typing:Ident",
         "//stdlib:Stdlib.Format",
         "//lambda:Debuginfo",
-        "//utils:Config",
+        "//config:Config",
         "//middle_end/flambda/base_types:Closure_origin",
         "//middle_end/flambda/base_types:Closure_id",
         "//utils:Clflags",
