--- a/toplevel/BUILD.bazel
+++ b/toplevel/BUILD.bazel
@@ -256,7 +256,7 @@ compiler_module(
         "//typing:Path",
         "//typing:Predef",
         "//utils:Clflags",
-        "//utils:Config",
+        "//config:Config",
         "//utils:Load_path",
         "//utils:Misc",
         ":Genprintval",
@@ -322,7 +322,7 @@ compiler_module(
         "//typing:Env",
         "//bytecomp:Dll",
         "//typing:Ctype",
-        "//utils:Config",
+        "//config:Config",
         "//driver:Compenv",
         "//utils:Clflags",
         "//typing:Btype",
@@ -390,7 +390,7 @@ compiler_module(
         "//typing:Typemod",
         "//typing:Types",
         "//utils:Clflags",
-        "//utils:Config",
+        "//config:Config",
         "//utils:Load_path",
         "//utils:Misc",
         "//utils:Warnings",
@@ -434,7 +434,7 @@ compiler_module(
         "//stdlib:Stdlib.Format",
         "//stdlib:Stdlib.Filename",
         "//typing:Env",
-        "//utils:Config",
+        "//config:Config",
         "//driver:Compmisc",
         "//driver:Compenv",
         "//utils:Clflags",
