--- a/lambda/BUILD.bazel
+++ b/lambda/BUILD.bazel
@@ -1,4 +1,5 @@
 load("//bzl:rules.bzl",
+     "boot_archive",
      "boot_library",
      "compiler_module",
      "compiler_signature",
@@ -40,6 +41,7 @@ boot_library(
     ],
 )
 
+# boot_archive(
 boot_library(
     name = "ocamlcommon",
     manifest  = [
@@ -399,7 +401,7 @@ compiler_module(
         "//stdlib:Stdlib.Result",
         "//stdlib:Stdlib.String",
         "//typing:Typedtree",
-        "//utils:Config",
+        "//config:Config",
         "//utils:Misc",
         "//utils:Warnings",
         ":Debuginfo",
@@ -496,7 +498,7 @@ compiler_module(
         "//typing:Ident",
         "//stdlib:Stdlib.Format",
         "//typing:Env",
-        "//utils:Config",
+        "//config:Config",
         "//utils:Clflags",
         "//typing:Btype",
         "//stdlib:Stdlib.Array",
@@ -589,7 +591,7 @@ compiler_module(
         "//typing:Ident",
         "//stdlib:Stdlib.Hashtbl",
         "//typing:Env",
-        "//utils:Config",
+        "//config:Config",
         "//utils:Clflags",
         "//typing:Btype",
     ]
@@ -634,7 +636,7 @@ compiler_module(
         "//stdlib:Stdlib.Format",
         "//stdlib:Stdlib.Filename",
         "//typing:Env",
-        "//utils:Config",
+        "//config:Config",
         "//utils:Clflags",
     ]
 )
