--- a/otherlibs/dynlink/BUILD.bazel
+++ b/otherlibs/dynlink/BUILD.bazel
@@ -1814,7 +1814,7 @@ boot_library(
         "//utils:Binutils",
         "//utils:Build_path_prefix_map",
         "//utils:Clflags",
-        "//utils:Config",
+        "//config:Config",
         "//utils:Consistbl",
         "//utils:Identifiable",
         "//utils:Int_replace_polymorphic_compare",
