--- a/otherlibs/systhreads/BUILD.bazel
+++ b/otherlibs/systhreads/BUILD.bazel
@@ -41,12 +41,12 @@ boot_archive(
     opts = ["-linkall"],
     cc_linkopts = ["-lunix"],
     manifest  = [
-        ":Condition",
+        # ":Condition",
         ":Event",
-        ":Mutex",
-        ":Semaphore",
+        # ":Mutex",
+        # ":Semaphore",
         ":Thread",
-        ":ThreadUnix",
+        # ":ThreadUnix",
     ],
 )
 
@@ -60,24 +60,24 @@ boot_archive(
 # ../../ocamlc.opt -nostdlib -I ../../stdlib -I ../../otherlibs/unix -c -w +33..39 -warn-error +A -g -bin-annot -safe-string mutex.mli
 
 
-compiler_module(
-    name   = "Condition",
-    struct = "condition.ml",
-    sig    = "Condition_cmi",
-    opts = MODULE_OPTS,
-    deps   = [
-        ":Mutex", ## (Otherlibs Systhreads Mutex)
-    ]
-)
+# compiler_module(
+#     name   = "Condition",
+#     struct = "condition.ml",
+#     sig    = "Condition_cmi",
+#     opts = MODULE_OPTS,
+#     deps   = [
+#         ":Mutex", ## (Otherlibs Systhreads Mutex)
+#     ]
+# )
 
-compiler_signature(
-    name = "Condition_cmi",
-    src  = "condition.mli",
-    opts = SIG_OPTS,
-    deps   = [
-        ":Mutex", ## (Otherlibs Systhreads Mutex)
-    ]
-)
+# compiler_signature(
+#     name = "Condition_cmi",
+#     src  = "condition.mli",
+#     opts = SIG_OPTS,
+#     deps   = [
+#         ":Mutex", ## (Otherlibs Systhreads Mutex)
+#     ]
+# )
 
 compiler_module(
     name   = "Event",
@@ -85,8 +85,8 @@ compiler_module(
     sig    = "Event_cmi",
     opts = MODULE_OPTS,
     deps   = [
-        ":Mutex", ## (Otherlibs Systhreads Mutex)
-        ":Condition", ## (Otherlibs Systhreads Condition)
+        # ":Mutex", ## (Otherlibs Systhreads Mutex)
+        # ":Condition", ## (Otherlibs Systhreads Condition)
         "//stdlib:Stdlib.Random",
         "//stdlib:Stdlib.Queue",
         "//stdlib:Stdlib.List",
@@ -98,45 +98,44 @@ compiler_signature(
     name = "Event_cmi",
     src  = "event.mli",
     opts = SIG_OPTS,
-    deps   = [
-    ]
+    deps   = ["//stdlib:Stdlib"]
 )
 
-compiler_module(
-    name   = "Mutex",
-    struct = "mutex.ml",
-    sig    = "Mutex_cmi",
-    opts = MODULE_OPTS,
-    deps   = [
-    ]
-)
+# compiler_module(
+#     name   = "Mutex",
+#     struct = "mutex.ml",
+#     sig    = "Mutex_cmi",
+#     opts = MODULE_OPTS,
+#     deps   = [
+#     ]
+# )
 
-compiler_signature(
-    name = "Mutex_cmi",
-    src  = "mutex.mli",
-    opts = SIG_OPTS,
-    deps   = [
-    ]
-)
+# compiler_signature(
+#     name = "Mutex_cmi",
+#     src  = "mutex.mli",
+#     opts = SIG_OPTS,
+#     deps   = [
+#     ]
+# )
 
-compiler_module(
-    name   = "Semaphore",
-    struct = "semaphore.ml",
-    sig    = "Semaphore_cmi",
-    opts = MODULE_OPTS,
-    deps   = [
-        ":Mutex", ## (Otherlibs Systhreads Mutex)
-        ":Condition", ## (Otherlibs Systhreads Condition)
-    ]
-)
+# compiler_module(
+#     name   = "Semaphore",
+#     struct = "semaphore.ml",
+#     sig    = "Semaphore_cmi",
+#     opts = MODULE_OPTS,
+#     deps   = [
+#         ":Mutex", ## (Otherlibs Systhreads Mutex)
+#         ":Condition", ## (Otherlibs Systhreads Condition)
+#     ]
+# )
 
-compiler_signature(
-    name = "Semaphore_cmi",
-    src  = "semaphore.mli",
-    opts = SIG_OPTS,
-    deps   = [
-    ]
-)
+# compiler_signature(
+#     name = "Semaphore_cmi",
+#     src  = "semaphore.mli",
+#     opts = SIG_OPTS,
+#     deps   = [
+#     ]
+# )
 
 compiler_module(
     name   = "Thread",
@@ -155,29 +154,28 @@ compiler_signature(
     name = "Thread_cmi",
     src  = "thread.mli",
     opts = SIG_OPTS,
-    deps   = [
-    ]
+    deps   = ["//stdlib:Stdlib"]
 )
 
-compiler_module(
-    name   = "ThreadUnix",
-    struct = "threadUnix.ml",
-    sig    = "ThreadUnix_cmi",
-    opts = MODULE_OPTS,
-    deps   = [
-        ":Unix", ## (Otherlibs Unix Unix)
-        "//otherlibs/systhreads:Thread", ## (Otherlibs Systhreads Thread)
-        "//stdlib:Stdlib.Bytes",
-    ]
-)
+# compiler_module(
+#     name   = "ThreadUnix",
+#     struct = "threadUnix.ml",
+#     sig    = "ThreadUnix_cmi",
+#     opts = MODULE_OPTS,
+#     deps   = [
+#         ":Unix", ## (Otherlibs Unix Unix)
+#         "//otherlibs/systhreads:Thread", ## (Otherlibs Systhreads Thread)
+#         "//stdlib:Stdlib.Bytes",
+#     ]
+# )
 
-compiler_signature(
-    name = "ThreadUnix_cmi",
-    src  = "threadUnix.mli",
-    opts = SIG_OPTS,
-    deps   = [
-    ]
-)
+# compiler_signature(
+#     name = "ThreadUnix_cmi",
+#     src  = "threadUnix.mli",
+#     opts = SIG_OPTS,
+#     deps   = [
+#     ]
+# )
 
 ################################################################
 # gcc -MM -D_FILE_OFFSET_BITS=64 -DCAML_NAME_SPACE  -I../../runtime -DNATIVE_CODE -DTARGET_amd64 -DMODEL_default -DSYS_macosx  st_stubs.c -MT 'st_stubs.n.o' -MF .dep/st_stubs.n.d
@@ -213,21 +211,17 @@ compiler_signature(
 cc_library(
     name = "threads",
     srcs = [
-        "st_posix.h",
-        "st_stubs.c"
+        "st_stubs.c",
+        "st_pthreads.h",
+        "//runtime:sync_posix.h"
     ] + select({
-        "//platform/os:windows_x86_64": ["st_win32.h"],
-        "//conditions:default":         []
+        "//platform:windows_x86_64?": ["st_win32.h"],
+        "//platform:windows_x86_32?": ["st_win32.h"],
+        "//conditions:default":      ["st_posix.h"]
     }),
     copts = [
-        ## "-O2", # set by --compilation_mode opt
-        ## "-g",  # set by --compilation_mode dbg
-        ## "-Wall", # always(?) set by bazel
-        "-fno-strict-aliasing", "-fwrapv",
-        "-pthread",
-        "-Wdeclaration-after-statement",
-        "-Werror",
-        "-fno-common",
+        "-I", "$(GENDIR)/runtime/caml/cross-compile", ##HACK for xcompile
+        # "-I", "runtime"
     ],
     linkopts = ["-lpthread"],
     deps = ["//runtime/caml:hdrs"],
@@ -237,7 +231,7 @@ cc_library(
         # "MODEL_"  + MODEL,
         # "SYS_"    + SYSTEM
     ] +select({
-        "//config/mode:native": ["NATIVE_CODE"],
+        "//platform/constraints/ocaml/emitter:sys?": ["NATIVE_CODE"],
         "//conditions:default": []
     # }) + select({
     #     "//config/arch:amd64": ["TARGET_amd64"],
